--- a/freedv_low/freedv_low_refs.bib
+++ b/freedv_low/freedv_low_refs.bib
@@ -17,3 +17,12 @@
   year={2014},
   publisher={AGU}
 }
+@article{etsi201,
+  title={201 980 V4. 2.1 (2021-01) Digital Radio Mondiale (DRM)},
+  author={ETSI, ES},
+  journal={System Specification. European Broadcast Union}
+}
+@misc{codec2_waveform_spreadsheet,
+  title = {{Codec 2 modem codec frame design spreadsheet}},
+  note = {\url{https://github.com/drowe67/codec2/blob/main/doc/modem_codec_frame_design.ods}}
+}
