--- a/freedv_low/freedv_low_refs.bib
+++ b/freedv_low/freedv_low_refs.bib
@@ -23,6 +23,6 @@
   journal={System Specification. European Broadcast Union}
 }
 @misc{codec2_waveform_spreadsheet,
-  title = {{Codec 2 modem codec frame design spreadsheet}},
+  title = {{Codec 2 repo, modem codec frame design spreadsheet}},
   note = {\url{https://github.com/drowe67/codec2/blob/main/doc/modem_codec_frame_design.ods}}
 }
